dfir_rs/tests/compile-fail/surface_fold_keyed_badtype_int.stderr
error[E0271]: type mismatch resolving `<Iter<Drain<'_, {integer}>> as Stream>::Item == (_, _)`
 --> tests/compile-fail/surface_fold_keyed_badtype_int.rs:3:9
  |
3 |         source_iter(0..1)
  |         ^^^^^^^^^^^^^^^^^ expected `(_, _)`, found integer
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                -------------------------------------------------------- required by a bound introduced by this call
  |
  = note: expected tuple `(_, _)`
              found type `{integer}`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_fold_keyed_badtype_int.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_input`

error[E0271]: type mismatch resolving `<Iter<Drain<'_, {integer}>> as Stream>::Item == (_, _)`
 --> tests/compile-fail/surface_fold_keyed_badtype_int.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `(_, _)`, found integer
  |
  = note: expected tuple `(_, _)`
              found type `{integer}`
note: required by a bound in `check_input`
 --> tests/compile-fail/surface_fold_keyed_badtype_int.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_input`
